--- a/entries/60_memtest86.conf
+++ b/entries/60_memtest86.conf
@@ -1,9 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/60_memtest86.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T19:04:17+0200
+# date:   2021-05-13T14:54:27+0200
+
+# helper
+version="$(
+    cat /boot/EFI/memtest86/version \
+)"
 
 # efibootmgr options
-label="MemTest86 9.0"
+label="MemTest86 $version"
 disk="/dev/nvme0n1"
 loader="/EFI/memtest86/BOOTX64.efi"
