--- a/entries/40_manjaro_linux_stable.conf
+++ b/entries/40_manjaro_linux_stable.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_stable.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T19:07:57+0200
+# date:   2021-06-24T22:32:31+0200
 
 # helper
 package_version="$( \
@@ -28,11 +28,16 @@ options="
     # kernel parameter
     quiet
     udev.log_priority=3
+
     mitigations=off
     i915.mitigations=off
+    i915.enable_guc=2
     random.trust_cpu=on
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
+
+    modprobe.blacklist=iTCO_wdt
+    modprobe.blacklist=btusb
 "
 
 # unset helper
