--- a/entries/30_arch_linux_lts.conf
+++ b/entries/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-11-19T18:23:31+0100
+# date:   2021-12-01T08:58:08+0100
 
 # helper
 package_version="$( \
@@ -18,7 +18,7 @@ loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux.img
+    initrd=/initramfs-linux-lts.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
