--- a/entries/amd/20_arch_linux.conf
+++ b/entries/amd/20_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/amd/20_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-12-12T19:01:35+0100
+# date:   2022-12-23T09:40:58+0100
 
 # use version number in entry
 version_number=false
@@ -22,6 +22,7 @@ options="
 
     random.trust_cpu=on
     mitigations=off
+    amd_pstate=passive
     #cpufreq.default_governor=powersave
 
     # disable watchdog
