--- a/examples/amd/30_arch_linux_lts.conf
+++ b/examples/amd/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-12-23T13:49:55+0100
+# date:   2023-01-17T09:51:10+0100
 
 # use version number in entry
 version_number=false
@@ -22,8 +22,8 @@ options="
 
     random.trust_cpu=on
     mitigations=off
-    amd_pstate=passive
-    #cpufreq.default_governor=powersave
+    #amd_pstate=passive
+    cpufreq.default_governor=powersave
 
     # disable watchdog
     nowatchdog
