--- a/examples/intel/30_arch_linux_lts.conf
+++ b/examples/intel/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-02-15T08:45:15+0100
+# date:   2023-02-20T17:07:39+0100
 
 # use version number in entry
 version_number=false
@@ -21,7 +21,7 @@ options="
     udev.log_priority=3
 
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     i915.enable_guc=2
     # cpufreq.default_governor=performance
 
