--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-03-15T07:52:26+0100
+# date:   2023-05-04T08:25:01+0200
 
 # use version number in entry
 version_number=false
@@ -22,7 +22,7 @@ options="
 
     tpm_tis.interrupts=0
     mitigations=off
-    #amd_pstate=passive
+    #amd_pstate=active
     cpufreq.default_governor=powersave
 
     # disable watchdog
